# Simple-MCP-Server

./: .env.example  README.md  aiagent.py  main.py  notes.md  pyproject.toml  simplenote.py
